// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Fulfill mappings for: redux-form@6.8.0 should fulfill exports for "redux-form/es/immutable" 1`] = `
Object {
  "exports": Object {
    "Field": Object {
      "exported": "Field",
      "local": "default",
      "source": "redux-form/es/immutable/Field",
    },
    "FieldArray": Object {
      "exported": "FieldArray",
      "local": "default",
      "source": "redux-form/es/immutable/FieldArray",
    },
    "Fields": Object {
      "exported": "Fields",
      "local": "default",
      "source": "redux-form/es/immutable/Fields",
    },
    "Form": Object {
      "exported": "Form",
      "local": "default",
      "source": "redux-form/es/Form",
    },
    "FormSection": Object {
      "exported": "FormSection",
      "local": "default",
      "source": "redux-form/es/FormSection",
    },
    "SubmissionError": Object {
      "exported": "SubmissionError",
      "local": "default",
      "source": "redux-form/es/SubmissionError",
    },
    "defaultShouldAsyncValidate": Object {
      "exported": "defaultShouldAsyncValidate",
      "local": "default",
      "source": "redux-form/es/defaultShouldAsyncValidate",
    },
    "defaultShouldValidate": Object {
      "exported": "defaultShouldValidate",
      "local": "default",
      "source": "redux-form/es/defaultShouldValidate",
    },
    "fieldInputPropTypes": Object {
      "exported": "fieldInputPropTypes",
      "local": "fieldInputPropTypes",
      "source": "redux-form/es/propTypes",
    },
    "fieldMetaPropTypes": Object {
      "exported": "fieldMetaPropTypes",
      "local": "fieldMetaPropTypes",
      "source": "redux-form/es/propTypes",
    },
    "fieldPropTypes": Object {
      "exported": "fieldPropTypes",
      "local": "fieldPropTypes",
      "source": "redux-form/es/propTypes",
    },
    "formPropTypes": Object {
      "exported": "formPropTypes",
      "local": "formPropTypes",
      "source": "redux-form/es/propTypes",
    },
    "formValueSelector": Object {
      "exported": "formValueSelector",
      "local": "default",
      "source": "redux-form/es/immutable/formValueSelector",
    },
    "formValues": Object {
      "exported": "formValues",
      "local": "default",
      "source": "redux-form/es/immutable/formValues",
    },
    "getFormAsyncErrors": Object {
      "exported": "getFormAsyncErrors",
      "local": "default",
      "source": "redux-form/es/immutable/getFormAsyncErrors",
    },
    "getFormInitialValues": Object {
      "exported": "getFormInitialValues",
      "local": "default",
      "source": "redux-form/es/immutable/getFormInitialValues",
    },
    "getFormMeta": Object {
      "exported": "getFormMeta",
      "local": "default",
      "source": "redux-form/es/immutable/getFormMeta",
    },
    "getFormNames": Object {
      "exported": "getFormNames",
      "local": "default",
      "source": "redux-form/es/immutable/getFormNames",
    },
    "getFormSubmitErrors": Object {
      "exported": "getFormSubmitErrors",
      "local": "default",
      "source": "redux-form/es/immutable/getFormSubmitErrors",
    },
    "getFormSyncErrors": Object {
      "exported": "getFormSyncErrors",
      "local": "default",
      "source": "redux-form/es/immutable/getFormSyncErrors",
    },
    "getFormSyncWarnings": Object {
      "exported": "getFormSyncWarnings",
      "local": "default",
      "source": "redux-form/es/immutable/getFormSyncWarnings",
    },
    "getFormValues": Object {
      "exported": "getFormValues",
      "local": "default",
      "source": "redux-form/es/immutable/getFormValues",
    },
    "hasSubmitFailed": Object {
      "exported": "hasSubmitFailed",
      "local": "default",
      "source": "redux-form/es/immutable/hasSubmitFailed",
    },
    "hasSubmitSucceeded": Object {
      "exported": "hasSubmitSucceeded",
      "local": "default",
      "source": "redux-form/es/immutable/hasSubmitSucceeded",
    },
    "isDirty": Object {
      "exported": "isDirty",
      "local": "default",
      "source": "redux-form/es/immutable/isDirty",
    },
    "isInvalid": Object {
      "exported": "isInvalid",
      "local": "default",
      "source": "redux-form/es/immutable/isInvalid",
    },
    "isPristine": Object {
      "exported": "isPristine",
      "local": "default",
      "source": "redux-form/es/immutable/isPristine",
    },
    "isSubmitting": Object {
      "exported": "isSubmitting",
      "local": "default",
      "source": "redux-form/es/immutable/isSubmitting",
    },
    "isValid": Object {
      "exported": "isValid",
      "local": "default",
      "source": "redux-form/es/immutable/isValid",
    },
    "propTypes": Object {
      "exported": "propTypes",
      "local": "default",
      "source": "redux-form/es/propTypes",
    },
    "reducer": Object {
      "exported": "reducer",
      "local": "default",
      "source": "redux-form/es/immutable/reducer",
    },
    "reduxForm": Object {
      "exported": "reduxForm",
      "local": "default",
      "source": "redux-form/es/immutable/reduxForm",
    },
    "values": Object {
      "exported": "values",
      "local": "default",
      "source": "redux-form/es/immutable/values",
    },
  },
  "indexFile": "redux-form/es/immutable",
  "name": "redux-form/immutable",
}
`;

exports[`Fulfill mappings for: redux-form@6.8.0 should fulfill exports for "redux-form/es/index" 1`] = `
Object {
  "exports": Object {
    "Field": Object {
      "exported": "Field",
      "local": "default",
      "source": "redux-form/es/Field",
    },
    "FieldArray": Object {
      "exported": "FieldArray",
      "local": "default",
      "source": "redux-form/es/FieldArray",
    },
    "Fields": Object {
      "exported": "Fields",
      "local": "default",
      "source": "redux-form/es/Fields",
    },
    "Form": Object {
      "exported": "Form",
      "local": "default",
      "source": "redux-form/es/Form",
    },
    "FormSection": Object {
      "exported": "FormSection",
      "local": "default",
      "source": "redux-form/es/FormSection",
    },
    "SubmissionError": Object {
      "exported": "SubmissionError",
      "local": "default",
      "source": "redux-form/es/SubmissionError",
    },
    "defaultShouldAsyncValidate": Object {
      "exported": "defaultShouldAsyncValidate",
      "local": "default",
      "source": "redux-form/es/defaultShouldAsyncValidate",
    },
    "defaultShouldValidate": Object {
      "exported": "defaultShouldValidate",
      "local": "default",
      "source": "redux-form/es/defaultShouldValidate",
    },
    "fieldInputPropTypes": Object {
      "exported": "fieldInputPropTypes",
      "local": "fieldInputPropTypes",
      "source": "redux-form/es/propTypes",
    },
    "fieldMetaPropTypes": Object {
      "exported": "fieldMetaPropTypes",
      "local": "fieldMetaPropTypes",
      "source": "redux-form/es/propTypes",
    },
    "fieldPropTypes": Object {
      "exported": "fieldPropTypes",
      "local": "fieldPropTypes",
      "source": "redux-form/es/propTypes",
    },
    "formPropTypes": Object {
      "exported": "formPropTypes",
      "local": "formPropTypes",
      "source": "redux-form/es/propTypes",
    },
    "formValueSelector": Object {
      "exported": "formValueSelector",
      "local": "default",
      "source": "redux-form/es/formValueSelector",
    },
    "formValues": Object {
      "exported": "formValues",
      "local": "default",
      "source": "redux-form/es/formValues",
    },
    "getFormAsyncErrors": Object {
      "exported": "getFormAsyncErrors",
      "local": "default",
      "source": "redux-form/es/getFormAsyncErrors",
    },
    "getFormInitialValues": Object {
      "exported": "getFormInitialValues",
      "local": "default",
      "source": "redux-form/es/getFormInitialValues",
    },
    "getFormMeta": Object {
      "exported": "getFormMeta",
      "local": "default",
      "source": "redux-form/es/getFormMeta",
    },
    "getFormNames": Object {
      "exported": "getFormNames",
      "local": "default",
      "source": "redux-form/es/getFormNames",
    },
    "getFormSubmitErrors": Object {
      "exported": "getFormSubmitErrors",
      "local": "default",
      "source": "redux-form/es/getFormSubmitErrors",
    },
    "getFormSyncErrors": Object {
      "exported": "getFormSyncErrors",
      "local": "default",
      "source": "redux-form/es/getFormSyncErrors",
    },
    "getFormSyncWarnings": Object {
      "exported": "getFormSyncWarnings",
      "local": "default",
      "source": "redux-form/es/getFormSyncWarnings",
    },
    "getFormValues": Object {
      "exported": "getFormValues",
      "local": "default",
      "source": "redux-form/es/getFormValues",
    },
    "hasSubmitFailed": Object {
      "exported": "hasSubmitFailed",
      "local": "default",
      "source": "redux-form/es/hasSubmitFailed",
    },
    "hasSubmitSucceeded": Object {
      "exported": "hasSubmitSucceeded",
      "local": "default",
      "source": "redux-form/es/hasSubmitSucceeded",
    },
    "isDirty": Object {
      "exported": "isDirty",
      "local": "default",
      "source": "redux-form/es/isDirty",
    },
    "isInvalid": Object {
      "exported": "isInvalid",
      "local": "default",
      "source": "redux-form/es/isInvalid",
    },
    "isPristine": Object {
      "exported": "isPristine",
      "local": "default",
      "source": "redux-form/es/isPristine",
    },
    "isSubmitting": Object {
      "exported": "isSubmitting",
      "local": "default",
      "source": "redux-form/es/isSubmitting",
    },
    "isValid": Object {
      "exported": "isValid",
      "local": "default",
      "source": "redux-form/es/isValid",
    },
    "propTypes": Object {
      "exported": "propTypes",
      "local": "default",
      "source": "redux-form/es/propTypes",
    },
    "reducer": Object {
      "exported": "reducer",
      "local": "default",
      "source": "redux-form/es/reducer",
    },
    "reduxForm": Object {
      "exported": "reduxForm",
      "local": "default",
      "source": "redux-form/es/reduxForm",
    },
    "values": Object {
      "exported": "values",
      "local": "default",
      "source": "redux-form/es/values",
    },
  },
  "indexFile": "redux-form/es/index",
  "name": "redux-form",
}
`;
